# anime-vector-service

./: .env.example  .gitignore  CLAUDE.md  MIGRATION_GUIDE.md  README.md  TESTING_SUMMARY.md  analyze_duration.py  comprehensive_genre_validation.py  comprehensive_vector_test_suite.py  enrichment_instructions.md  fixed_semantic_genre_validation.py  mypy_report.txt  process_stage1_metadata.py  process_stage2_episodes.py  process_stage3_relationships.py  process_stage5_characters.py  pyproject.toml  reindex_anime_database.py  requirements.txt  run_enrichment.py  test_dataset_compatibility.py  test_with_real_data.py  train_genre_enhancement.py  validate_enrichment_database.py  validation_report_20250813_170203.json
WORKING_LOG/: 2025-08-05-memory-enhancement.md  session_template.md
client/: __init__.py  vector_client.py
data/qdrant_storage/: enriched_anime_database.json
docker/: docker-compose.prd.yml  docker-compose.yml
docs/: architecture.md  implementation_plan.md  technical.md
docs/knowledge-base/: README.md
models/genre_enhanced/: fine_tuning_config.json
rules/: archiecture-understanding.md  debug.md  directory-structure.md  error-documentation.md  implement.md  lessons-learned.md  memory-persistence.md  memory.md  plan.md  rules.md  self-updating-system.md
scripts/: assemble_enrichment.py  process_stage5_characters.py  reindex_anime_database.py  reorder_enrichment_fields.py  validate_enrichment_database.py
src/: main.py
src/api/: __init__.py  admin.py  search.py  similarity.py
src/cache_manager/: aiohttp_adapter.py  async_redis_storage.py  config.py  manager.py  result_cache.py
src/config/: __init__.py  settings.py
src/enrichment/: ai_character_matcher.py
src/models/: anime.py
src/validation/: README.md  __init__.py  ab_testing.py  dataset_analyzer.py  embedding_quality.py  search_quality.py  vector_field_mapping.py  vector_system_validator.py
src/vector/: __init__.py  anime_dataset.py  anime_field_mapper.py  anime_fine_tuning.py  art_style_classifier.py  character_recognition.py  embedding_manager.py  genre_enhancement.py  qdrant_client.py  text_processor.py  vision_processor.py
stubs/hishel/: __init__.pyi  (+1 more)
tasks/: active_context.md  tasks_plan.md
tests/: debug_raw_scores.py  debug_scores.py  test_comprehensive_vectors.py  test_main.py  test_title_vector.py
(+66 files in other folders)
