[project]
name = "anime-vector-service"
version = "0.1.0"
description = "Microservice for anime vector database operations with semantic search capabilities"
requires-python = ">=3.12"
dependencies = [
    # Core FastAPI dependencies
    "fastapi==0.115.13",
    "uvicorn==0.34.3",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.0",
    "python-dotenv>=1.1.0",
    # Vector database
    "qdrant-client[fastembed]==1.14.3",
    # Embedding models
    "sentence-transformers==5.0.0",
    "transformers==4.55.0",
    "torch>=2.0.0",
    "timm>=1.0.17", # Required for JinaCLIP v2 model support
    "einops>=0.8.0", # Required for JinaCLIP v2 vision transformers
    # Image processing
    "pillow>=11.2.1",
    "clip @ git+https://github.com/openai/CLIP.git",
    # HTTP client for external requests
    "aiohttp==3.12.13",
    # Web scraping dependencies
    "cloudscraper>=1.2.71",
    "beautifulsoup4>=4.12.0",
    # Fine-tuning capabilities
    "peft==0.16.0",
    "accelerate==1.8.1",
    # Security dependencies
    "cryptography>=45.0.4",
    "certifi>=2025.6.15",
    "requests>=2.32.4",
    "urllib3>=2.5.0",
]

[project.optional-dependencies]
dev = [
    # Testing dependencies
    "pytest>=8.2.0",
    "pytest-asyncio==1.0.0",
    "httpx>=0.28.1",
    "pytest-cov==6.2.1",
    "pytest-mock==3.14.1",

    # Development dependencies
    "black>=24.0.0",
    "isort>=5.13.0",
    "autoflake>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "isort>=6.0.1",
]
